Remove unnecessary `@inheritall` on antcall

--- a/build.xml
+++ b/build.xml
@@ -242,14 +242,14 @@ is loaded when Ant starts up. Please run Ant again like this:
   <!-- Generate a copy of the site for proofing. -->
   <target name="makeProofingSite"
      description="Generate a copy of the full DHQ site, including unpublished articles listed in the TOC.">
-    <!-- The preview version of the DHQs site must be stored separately from the regular, public site. 
+    <!-- The preview version of the DHQ site must be stored separately from the regular, public site. 
       To manage this, we set the "context.use" property before the "generateIssues" target can. -->
-    <property name="context.use" value="${context}-preview"/>
+    <property name="context.use" value="${context}-proofing"/>
     <!-- Within ${toDir.base}, individually generated static site files will be 
-      written to the ${context}-preview directory. -->
-    <property name="toDir.preview" value="${toDir.base}${file.separator}${context.use}"/>
+      written to the ${context}-proofing directory. -->
+    <property name="toDir.proofing" value="${toDir.base}${file.separator}${context.use}"/>
     <property name="do.proofing" value="true"/>
-    <antcall target="generateIssues" inheritall="true"/>
+    <antcall target="generateIssues"/>
   </target>
   
   <!-- Compress the static site's files for backup and transportation. -->
