Generate index and bios pages for the "Internal Preview" area

--- a/build.xml
+++ b/build.xml
@@ -123,6 +123,7 @@ is loaded when Ant starts up. Please run Ant again like this:
       <param name="static-dir" expression="${context.use}"/>
       <param name="doProofing" expression="${do.proofing}"/>
     </xslt>
+    <!--<echo message="${do.proofing}"/>-->
   </target>
 
   <!-- Generate a static version of the DHQ website. -->
