Don't run "compressStatic" as part of "generateSite" target.
Per collaborative development meeting. We can `rsync` the static
site directory to the DHQ server, rather than taking the time to
compress and transmit it.

--- a/build.xml
+++ b/build.xml
@@ -245,10 +245,11 @@ is loaded when Ant starts up. Please run Ant again like this:
     <mkdir dir="${toDir.static.path}${file.separator}data"/>
     <!-- Use the Ant build file created in "generateIssues" to zip up all article 
       XML. -->
+    <echo>Zipping XML for all articles…</echo>
     <ant antfile="${toDir.base.path}${file.separator}article-map.xml" dir="${basedir}" 
          target="zipArticleXml" inheritRefs="true"/>
-    <!-- Generate the ZIP file of the entire static site. -->
-    <antcall target="compressStatic"/>
+    <echo>Done!</echo>
+    <echo>To zip up the entire static site directory, use the "compressStatic" build target.</echo>
   </target>
   
   <!-- Generate a copy of the site for proofing. -->
