Only prompt for `do.proofing.full` if it hasn't been set yet.
So someone can issue the command
`ant -Ddo.proofing.full=true makeInternalPreview`
in, for instance, a headless environment.

--- a/build.xml
+++ b/build.xml
@@ -268,7 +268,8 @@ is loaded when Ant starts up. Please run Ant again like this:
       the "generateIssues" target can. -->
     <property name="toDir.use" value="${toDir.proofing.path}"/>
     <property name="do.proofing" value="true"/>
-    <input addproperty="do.proofing.full" defaultvalue="false"
+    <input unless:set="${do.proofing.full}"
+           addproperty="do.proofing.full" defaultvalue="false"
            validargs="true,false"
 >Do you want to proof the full DHQ site? If so, type "true".
 To proof only the internal preview, hit the return key or type "false".</input>
