Keep words in one piece in `help` output

--- a/build.xml
+++ b/build.xml
@@ -82,23 +82,23 @@ is loaded when Ant starts up. Please run Ant again like this:
     <echo>  transform one article XML file (specified via its 6-digit number with</echo>
     <echo>  -Darticle.id=, or via a prompt) into HTML. The output file is placed</echo>
     <echo>  in the ${previewDir}${file.separator} subdirectory. It has relative links to assets in</echo>
-    <echo>  this main directory (not the subdirectory), and thus should be suit-</echo>
-    <echo>  able for viewing on your local machine. (And may not be suitable for</echo>
-    <echo>  use on the server.)</echo>
+    <echo>  this main directory (not the subdirectory), and thus should be</echo>
+    <echo>  suitable for viewing on your local machine. (And may not be suitable</echo>
+    <echo>  for use on the server.)</echo>
     <echo>zipPreviewArticle</echo>
     <echo>  similar to 'previewArticle', but: a) The output HTML file *and* its</echo>
     <echo>  assets are archived together into a single ZIP file. b) The output</echo>
     <echo>  HTML file uses relative links to the assets in the same directory,</echo>
     <echo>  as would happen when the ZIP file is unzipped. Both the HTML file</echo>
-    <echo>  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory, overwrit-</echo>
-    <echo>  ing any previous version there.</echo>
+    <echo>  and the ZIP file are put in the ${previewDir}${file.separator} subdirectory,</echo>
+    <echo>  overwriting any previous version there.</echo>
     <echo>generateIssues</echo>
     <echo>  generates the entire static site — index pages and HTML for each issue</echo>
     <echo>  listed in the toc${file.separator}toc.xml file, including the article itself, the author</echo>
     <echo>  biographies, and the “landing” page. The output is placed in the</echo>
-    <echo>  ${toDir.static}/ directory, i.e. in a sibling to this directory, over-</echo>
-    <echo>  writing any previous version. (Some temporary files are also placed in</echo>
-    <echo>  ${toDir.base.path}/.) The output is designed to be viewed from a server, as</echo>
+    <echo>  ${toDir.static}${file.separator} directory, i.e. in a sibling to this directory, overwriting</echo>
+    <echo>  any previous version. (Some temporary files are also placed in</echo>
+    <echo>  ${toDir.base.path}${file.separator}.) The output is designed to be viewed from a server, as</echo>
     <echo>  it uses absolute filepaths to its assets. Thus it will not work properly</echo>
     <echo>  (and will look ugly) if viewed on your local machine.</echo>
     <echo>generateSite</echo>
